--- a/Time/Lab/organizer/templates/main.html
+++ b/Time/Lab/organizer/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <a href="{%url 'register'%}">Регистрация</a>
+    <a href="{%url 'registration/'%}">Регистрация</a>
 </head>
 <body>
     <div>
