--- a/Time/Lab/organizer/templates/main.html
+++ b/Time/Lab/organizer/templates/main.html
@@ -2,21 +2,202 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <a href="{%url 'registration/'%}">Регистрация</a>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="files/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="files/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="files/favicon-16x16.png">
+    <link rel="manifest" href="files/site.webmanifest">
+    <title>TimeTicket_OMGSoft</title>
 </head>
 <body>
-    <div>
-        {% for el in context.events %}
-        <div>
-            <h3>
-                {{ el.title }}
+    <header>
+        
+        <nav class="navbar">
+            
+            <ul class="navbar-left">
+                
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="meropriyatia.html">Создать мероприятие</a></li>
+            </ul>
+            <ul class="navbar-right">
+              <li><a href="register.html">Зарегистрироваться</a></li>
+              <li><a href="sign_in.html">Войти</a></li>
+            </ul>
+        </nav>
 
-            </h3>
 
+        
+        <div class="botoom-header bh-1">
+            <div class="container">
+              <div class="botomm-menu">
+                <div class="botoom-header-left">
+                  <h1>Доска мероприятий</h1>
+                  <p>
+                    Обо всех важных мероприятиях в городе Нижний Новгород!!!
+                  </p>
+                
+                </div>
+    
+                <div class="botoom-header-right">
+                  <img src="https://images.unsplash.com/photo-1681731824644-6fde4c89eaeb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=436&q=80" alt=""  class="img-bm-r"/>
+                </div>
+    
+              </div>
+            </div>
+          </div>
+    </header>
+
+    <section>
+        <!-- <div class="image-fon"> -->
+            <div class="content">
+                
+            </div>
+            <div class="mer">
+                <h1>Мероприятия</h1>
+                
+            </div>
+
+            <div class="card">
+                <div class="container-tape ct">
+                    <div class="cont-tape">
+                        
+                      <div class="url-tape ct-1 ">
+                        <a href="#">Техника</a>
+                      </div>
+    
+                        <div class="text-tape">
+                            <div class="text-tape-center">
+                                <h5>Стиральная машинка Bosch</h5>
+                                <p class="description-tape">
+                                    Уходящий год для айтишников прошёл под девизом: «Work
+                                    hard, learn more».
+                                </p>
+                                <p class="price-tape">1000 Р</p>
+            
+                                <div class="date-watch">
+                                    <p>14 апреля 2021</p>
+                                    <div class="eye-wach">
+                                    <img src="./img/main/eye.svg" alt="" />
+                                    <p>356</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cont-tape">
+                        <div class="url-tape ct-1 ">
+                          <a href="#">Техника</a>
+                        </div>
+      
+                          <div class="text-tape">
+                              <div class="text-tape-center">
+                                  <h5>Стиральная машинка Bosch</h5>
+                                  <p class="description-tape">
+                                      Уходящий год для айтишников прошёл под девизом: «Work
+                                      hard, learn more».
+                                  </p>
+                                  <p class="price-tape">1000 Р</p>
+              
+                                  <div class="date-watch">
+                                      <p>14 апреля 2021</p>
+                                      <div class="eye-wach">
+                                      <img src="./img/main/eye.svg" alt="" />
+                                      <p>356</p>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+
+                      <div class="cont-tape">
+                        <div class="url-tape ct-1 ">
+                          <a href="#">Техника</a>
+                        </div>
+      
+                          <div class="text-tape">
+                              <div class="text-tape-center">
+                                  <h5>Стиральная машинка Bosch</h5>
+                                  <p class="description-tape">
+                                      Уходящий год для айтишников прошёл под девизом: «Work
+                                      hard, learn more».
+                                  </p>
+                                  <p class="price-tape">1000 Р</p>
+
+                                  <div class="button-container ">
+                                    <button class="buy-button" id="open-modal">Купить(УКАЗЫВАЕМ ЦЕНУ)</button>
+
+                                    
+
+                                    <div id="modal" class="modal">
+                                        <div class="modal-content">
+                                            <span class="close">&times;</span>
+                                            <div class="modal-image">
+                                              <div class="slider">
+                                                <div class="slides">
+                                                  <div class="slide"><img src="static/files/images/meropriyatie.png"></div>
+                                                  <div class="slide"><img src="static/files/images/parus.png"></div>
+                                                  <div class="slide"><img src="static/files/images/rose.png"></div>
+                                                </div>
+                                                <div class="controls">
+                                                  <button class="prev">Prev</button>
+                                                  <button class="next">Next</button>
+                                                </div>
+                                              </div>
+                                            </div>
+                                              <div class="modal-description">
+                                                <h3>Название товара</h3>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, sapien vel bibendum bibendum, velit sapien luctus velit, vel lacinia velit velit vel velit. Sed euismod, sapien vel bibendum bibendum, velit sapien luctus velit, vel lacinia velit velit vel velit.</p>
+                                                <p>Цена: 1000 Р</p>
+                                                <div class="button-container">
+                                                  <button class="buy-button">Купить</button>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                  </div>
+                                  
+              
+                                  <div class="date-watch">
+                                      <p>14 апреля 2021</p>
+                                      <div class="eye-wach">
+                                      <img src="./img/main/eye.svg" alt="" />
+                                      <p>356</p>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                           
+                      </div>
+
+                      
+                </div>    
+                
+            
+            </div>
+
+            <div class="foot-div">
+                <h3 class="h3-foot">Обращайтесь за помощью!</h3>
+                <img src="files/free-icon-phone-call-5585856.png" alt="">
+                
+            </div>
         </div>
-        {% endfor %}
+        
+    </section>
 
-    </div>
+    <footer>
+        
+    </footer>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="static/js/modal.js"></script>
+    <script src="static/js/slider.js"></script>
 </body>
 </html>
