--- a/Time/Lab/templates/base.html
+++ b/Time/Lab/templates/base.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="files/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="files/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="files/favicon-16x16.png">
+    <link rel="manifest" href="files/site.webmanifest">
+    <title>TimeTicket_OMGSoft</title>
 </head>
 <body>
+    <header>
+        <nav class="nav-nav">
+            
+            <div class="nav-flex">
+                <img src="files/android-chrome-192x192.png" alt="logo_tt" class="img-nav">
+                <ul class="ul-nav">
+                    <li><a href=""><span class="span-a">Главная</span></a></li>
+                    <li><a href="">0 нас</a></li>
+                    
+                    
+                </ul>
+                <ul class="ul-nav" id="ul2">
+                    <li><a href="" id="org">Организатору</a></li>
+                    <li><a href="">Клиенту</a></li>
+                </ul>
+            
+            </div>
+        </nav>
+    </header>
 
+    <section>
+        <div class="image-fon">
+            <div class="content">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae commodi nihil autem velit animi, explicabo, itaque accusamus similique maxime inventore ratione voluptas dolorum facilis accusantium saepe, adipisci voluptatem tempora exercitationem.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
